about page and job page completed

--- a/about.html
+++ b/about.html
@@ -166,7 +166,13 @@
             At Stafuel, our commitment to quality means two things. First, we are committed to delivering quality solutions, meeting expectations, and satisfying clients. Second, we are committed to continuously improving the processes by which we provide our solutions so that our work repeatedly hits the mark each time.
           </p>
           <p>
-            <span style="font-weight: 600;">Our Partnership Pledge : </span>At SCS, our team is committed to building strong, long-term relationships with our clients. We believe in working as a team to provide the best service for you. To achieve this, we spend time getting to know your business and requirements so we have a well-informed understanding of your needs, goals and requirements. We deliver the right help and advice on demand, that inspires and creates trust, mutual respect, transparency, accountability, and a sense of operational partnership.
+            <span style="font-weight: 600; color: black;">Our Partnership Pledge : </span>At SCS, our team is committed to building strong, long-term relationships with our clients. We believe in working as a team to provide the best service for you. To achieve this, we spend time getting to know your business and requirements so we have a well-informed understanding of your needs, goals and requirements. We deliver the right help and advice on demand, that inspires and creates trust, mutual respect, transparency, accountability, and a sense of operational partnership.
+          </p>
+          <p>
+            <span style="font-weight: 600; color: black;">Our Vision : </span>Our vision is to provide excellent services that fulfill the expectations of our client companies. We strive to be recognized and trusted all across the world by our clients as well as candidates.
+          </p>
+          <p>
+            <span style="font-weight: 600; color: black;">Our Mission : </span>Our mission is to deliver our clients as well as candidates an overwhelming recruitment service experience grounded on mutual conviction and professional principles with due economy.
           </p>
         </div>
       </div>
@@ -277,17 +283,17 @@
     <section class="work-section style-two">
       <div class="auto-container">
         <div class="sec-title text-center">
-          <h2>How It Works?</h2>
-          <div class="text">Job for anyone, anywhere</div>
+          <h2>Our Services</h2>
+          <div class="text">Expert solutions for all your business and hiring needs.</div>
         </div>
 
-        <div class="row">
+        <div class="row d-flex justify-content-center">
           <!-- Work Block -->
           <div class="work-block col-lg-4 col-md-6 col-sm-12">
             <div class="inner-box">
               <figure class="image"><img src="images/resource/work-1.png" alt=""></figure>
-              <h5>Free Resume Assessments</h5>
-              <p>Employers on average spend 31 seconds scanning resumes to identify potential matches.</p>
+              <h5>Contract Staffing</h5>
+              <p>Whether you need to fill one high-impact position or build a full project team, we're here to handle all the details from start to finish so you have the exact talent you need to achieve your business goals.</p>
             </div>
           </div>
 
@@ -295,19 +301,12 @@
           <div class="work-block col-lg-4 col-md-6 col-sm-12">
             <div class="inner-box">
               <figure class="image"><img src="images/resource/work-2.png" alt=""></figure>
-              <h5>Job Fit Scoring</h5>
-              <p>Employers on average spend 31 seconds scanning resumes to identify potential matches.</p>
+              <h5>Managed Services</h5>
+              <p>No matter your specific IT or Technologies needs, our consultants are here to act as a true extension of your internal teams to usher your projects through from concept to implementation. We provide a flexible delivery model and scope management by utilizing a team based staffing model.</p>
             </div>
           </div>
 
-          <!-- Work Block -->
-          <div class="work-block col-lg-4 col-md-6 col-sm-12">
-            <div class="inner-box">
-              <figure class="image"><img src="images/resource/work-3.png" alt=""></figure>
-              <h5>Help Every Step of the Way</h5>
-              <p>Employers on average spend 31 seconds scanning resumes to identify potential matches.</p>
-            </div>
-          </div>
+
 
         </div>
       </div>
