--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <nav class="nav main-menu">
               <ul class="navigation" id="navbar">
                 <li class="current">
-                  <a href="#">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="">
-                  <a href="#">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li class="">
-                  <a href="#">Find Jobs</a>
+                  <a href="jobs.html">Find Jobs</a>
                 </li>
                 <li class="">
-                  <a href="#">Blogs</a>
+                  <a href="blogs.html">Blogs</a>
                 </li>
                 <li class="">
-                  <a href="#">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
 
                 
@@ -68,7 +68,7 @@
 
           <div class="outer-box">
             <div class="btn-box">
-              <a href="#" class="theme-btn btn-style-seven">Upload Your Resume</a>
+              <a href="upload-resume.html" class="theme-btn btn-style-seven">Upload Your Resume</a>
             </div>
           </div>
         </div>
@@ -76,17 +76,12 @@
 
       <!-- Mobile Header -->
       <div class="mobile-header">
-        <div class="logo"><a href="index.html"><img src="images/logo-3.svg" alt="" title=""></a></div>
+        <div class="logo"><a href="index.html"><img class="logo_navbar_mobile" src="images/stafuel-logo.png" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
 
           <div class="outer-box">
-            <!-- Login/Register -->
-            <div class="login-box">
-              <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
-            </div>
-
             <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
           </div>
         </div>
@@ -368,7 +363,7 @@
           <div class="job-block-five">
             <div class="inner-box">
               <div class="content">
-                <span class="icon company-logo">
+                <span class="icon company-logo d-md-flex d-none">
                   <span class="flaticon-briefcase"></span>
                 </span>
                 <h4><a href="#">Software Engineer (Android), Libraries</a></h4>
@@ -390,7 +385,7 @@
           <div class="job-block-five">
             <div class="inner-box">
               <div class="content">
-                 <span class="icon company-logo">
+                 <span class="icon company-logo d-md-flex d-none">
                   <span class="flaticon-briefcase"></span>
                 </span>
                 <h4><a href="#">Recruiting Coordinator</a></h4>
@@ -412,7 +407,7 @@
           <div class="job-block-five">
             <div class="inner-box">
               <div class="content">
-                <span class="icon company-logo">
+                <span class="icon company-logo d-md-flex d-none">
                   <span class="flaticon-briefcase"></span>
                 </span>
                 <h4><a href="#">Product Manager, Studio</a></h4>
@@ -434,7 +429,7 @@
           <div class="job-block-five">
             <div class="inner-box">
               <div class="content">
-                <span class="icon company-logo">
+                <span class="icon company-logo d-md-flex d-none">
                   <span class="flaticon-briefcase"></span>
                 </span>
                 <h4><a href="#">Senior Product Designer</a></h4>
@@ -456,7 +451,7 @@
           <div class="job-block-five">
             <div class="inner-box">
               <div class="content">
-                <span class="icon company-logo">
+                <span class="icon company-logo d-md-flex d-none">
                   <span class="flaticon-briefcase"></span>
                 </span>
                 <h4><a href="#">Senior Full Stack Engineer, Creator Success</a></h4>
