--- a/jobs.html
+++ b/jobs.html
@@ -43,19 +43,19 @@
             <nav class="nav main-menu">
               <ul class="navigation" id="navbar">
                 <li class="">
-                  <a href="#">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="">
-                  <a href="#">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li class="current">
-                  <a href="">Find Jobs</a>
+                  <a href="jobs.html">Find Jobs</a>
                 </li>
                 <li class="">
-                  <a href="#">Blogs</a>
+                  <a href="blogs.html">Blogs</a>
                 </li>
                 <li class="">
-                  <a href="#">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
 
                 
@@ -66,7 +66,7 @@
 
           <div class="outer-box">
             <div class="btn-box">
-              <a href="#" class="theme-btn btn-style-seven">Upload Your Resume</a>
+              <a href="upload-resume.html" class="theme-btn btn-style-seven">Upload Your Resume</a>
             </div>
           </div>
         </div>
@@ -74,17 +74,12 @@
 
       <!-- Mobile Header -->
       <div class="mobile-header">
-        <div class="logo"><a href="index.html"><img src="images/logo-3.svg" alt="" title=""></a></div>
+        <div class="logo"><a href="index.html"><img class="logo_navbar_mobile" src="images/stafuel-logo.png" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
 
           <div class="outer-box">
-            <!-- Login/Register -->
-            <div class="login-box">
-              <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
-            </div>
-
             <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
           </div>
         </div>
@@ -94,7 +89,6 @@
       <div id="nav-mobile"></div>
     </header>
     <!--End Main Header -->
-
     <!--Page Title-->
     <section class="page-title style-two">
       <div class="auto-container">
@@ -298,7 +292,6 @@
     </section>
     <!--End Listing Page Section -->
 
-
     <!-- Subscribe Section -->
     <section class="container px-md-5 px-3 subscribe-section at-home21" style="margin-top: 120px;">
       <div class="auto-container">
@@ -362,10 +355,10 @@
                     <h4 class="widget-title">Useful Links</h4>
                     <div class="widget-content">
                       <ul class="list">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
                   </div>
@@ -376,12 +369,12 @@
                     <h4 class="widget-title">Categories</h4>
                     <div class="widget-content">
                       <ul class="list">
-                        <li><a href="#">Finance</a></li>
-                        <li><a href="#">Engineering</a></li>
-                        <li><a href="#">Logistics</a></li>
-                        <li><a href="#">Media & Advertising</a></li>
-                        <li><a href="#">Manufacturing</a></li>
-                        <li><a href="#">Telecom</a></li>
+                        <li><a href="jobs.html">Finance</a></li>
+                        <li><a href="jobs.html">Engineering</a></li>
+                        <li><a href="jobs.html">Logistics</a></li>
+                        <li><a href="jobs.html">Media & Advertising</a></li>
+                        <li><a href="jobs.html">Manufacturing</a></li>
+                        <li><a href="jobs.html">Telecom</a></li>
                       </ul>
                     </div>
                   </div>
@@ -393,13 +386,13 @@
                     <h4 class="widget-title">Helpful Resources</h4>
                     <div class="widget-content">
                       <ul class="list">
-                        <li><a href="#">Automobile</a></li>
-                        <li><a href="#">Banking & Insurance</a></li>
-                        <li><a href="#">BPO</a></li>
-                        <li><a href="#">Chemical Industry</a></li>
-                        <li><a href="#">Hospitality</a></li>
-                        <li><a href="#">IT Services</a></li>
-                        <li><a href="#">Pharmaceuticals</a></li>
+                        <li><a href="jobs.html">Automobile</a></li>
+                        <li><a href="jobs.html">Banking & Insurance</a></li>
+                        <li><a href="jobs.html">BPO</a></li>
+                        <li><a href="jobs.html">Chemical Industry</a></li>
+                        <li><a href="jobs.html">Hospitality</a></li>
+                        <li><a href="jobs.html">IT Services</a></li>
+                        <li><a href="jobs.html">Pharmaceuticals</a></li>
                       </ul>
                     </div>
                   </div>
@@ -430,7 +423,6 @@
       <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
     </footer>
     <!-- End Main Footer -->
-
 
 
   </div><!-- End Page Wrapper -->
