--- a/application.html
+++ b/application.html
@@ -33,69 +33,64 @@
 
     <!-- Main Header-->
     <header class="main-header header-style-three">
-      <div class="container-fluid">
-        <!-- Main box -->
-        <div class="main-box">
-          <!--Nav Outer -->
-          <div class="nav-outer">
-            <div class="logo-box">
-              <div class="logo logo_navbar"><a href="index.html"><img src="images/stafuel-logo.png" alt="" title=""></a></div>
+        <div class="container-fluid">
+          <!-- Main box -->
+          <div class="main-box">
+            <!--Nav Outer -->
+            <div class="nav-outer">
+              <div class="logo-box">
+                <div class="logo logo_navbar"><a href="index.html"><img src="images/stafuel-logo.png" alt="" title=""></a></div>
+              </div>
+  
+              <nav class="nav main-menu">
+                <ul class="navigation" id="navbar">
+                  <li class="">
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li class="">
+                    <a href="about.html">About</a>
+                  </li>
+                  <li class="current">
+                    <a href="jobs.html">Find Jobs</a>
+                  </li>
+                  <li class="">
+                    <a href="blogs.html">Blogs</a>
+                  </li>
+                  <li class="">
+                    <a href="contact.html">Contact</a>
+                  </li>
+  
+                  
+                </ul>
+              </nav>
+              <!-- Main Menu End-->
             </div>
-
-            <nav class="nav main-menu">
-              <ul class="navigation" id="navbar">
-                <li class="">
-                  <a href="#">Home</a>
-                </li>
-                <li class="">
-                  <a href="#">About</a>
-                </li>
-                <li class="">
-                  <a href="">Find Jobs</a>
-                </li>
-                <li class="current">
-                  <a href="#">Blogs</a>
-                </li>
-                <li class="">
-                  <a href="#">Contact</a>
-                </li>
-
-                
-              </ul>
-            </nav>
-            <!-- Main Menu End-->
+  
+            <div class="outer-box">
+              <div class="btn-box">
+                <a href="upload-resume.html" class="theme-btn btn-style-seven">Upload Your Resume</a>
+              </div>
+            </div>
           </div>
-
-          <div class="outer-box">
-            <div class="btn-box">
-              <a href="#" class="theme-btn btn-style-seven">Upload Your Resume</a>
+        </div>
+  
+        <!-- Mobile Header -->
+        <div class="mobile-header">
+          <div class="logo"><a href="index.html"><img class="logo_navbar_mobile" src="images/stafuel-logo.png" alt="" title=""></a></div>
+  
+          <!--Nav Box-->
+          <div class="nav-outer clearfix">
+  
+            <div class="outer-box">
+              <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Mobile Header -->
-      <div class="mobile-header">
-        <div class="logo"><a href="index.html"><img src="images/logo-3.svg" alt="" title=""></a></div>
-
-        <!--Nav Box-->
-        <div class="nav-outer clearfix">
-
-          <div class="outer-box">
-            <!-- Login/Register -->
-            <div class="login-box">
-              <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
-            </div>
-
-            <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Mobile Nav -->
-      <div id="nav-mobile"></div>
-    </header>
-    <!--End Main Header -->
+  
+        <!-- Mobile Nav -->
+        <div id="nav-mobile"></div>
+      </header>
+      <!--End Main Header -->
 
 
     <!-- Job Detail Section -->
@@ -243,135 +238,135 @@
 
     <!-- Subscribe Section -->
     <section class="container px-md-5 px-3 subscribe-section at-home21" style="margin-top: 120px;">
-      <div class="auto-container">
-        <div class="outer-box wow fadeInUp">
-          <div class="sec-title">
-            <h2 class="mb-3" style="color: white;">Subscribe Our Newsletter</h2>
-            <div style="color: white;">Advertise your jobs to millions of monthly users and search<br> 15.8 million CVs in our database.</div>
-          </div>
-          <div class="form-column">
-            <div class="subscribe-form">
-              <form method="post" action="#">
-                <div class="form-group">
-                  <div class="response"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" name="email" class="email bdrs120" value="" placeholder="Your e-mail" required>
-                  <button type="button" id="subscribe-newslatters" class="theme-btn home21-style btn-style-one bg-dark bdrs120">Subscribe <i class="fal fa-long-arrow-right ms-3"></i></button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Subscribe Section -->
-
-    <!-- Main Footer -->
-    <footer class="main-footer alternate3">
-      <div class="auto-container">
-        <!--Widgets Section-->
-        <div class="widgets-section">
-          <div class="row">
-            <div class="big-column col-xl-4 col-lg-3 col-md-12">
-              <div class="footer-column about-widget">
-                <div class="logo"><a href="#"><img style="width: 185px;" src="images/stafuel-logo.png" alt=""></a></div>
-                <p class="phone-num"><span>Call us </span><a href="">+91 7382488318</a></p>
-                <p class="address">3D.No: 10-1-112/4, K.N.Road, Opp SBI bank Market Yard Branch, Tadepalligudem, West Godavari, Andhra Pradesh-534102. <br><a href="mailto:info@stafuel.in" class="email">info@stafuel.in</a></p>
-              </div>
-            </div>
-
-            <div class="big-column col-xl-8 col-lg-9 col-md-12">
-              <div class="row">
-                <div class="footer-column col-lg-3 col-md-6 col-sm-12">
-                  <div class="footer-widget links-widget">
-                    <h4 class="widget-title">Official Emails</h4>
-                    <div class="widget-content">
-                      <ul class="list">
-                        <li><a href="#">info@stafuel.in</a></li>
-                        <li><a href="#">info@stafuel.in</a></li>
-                        <li><a href="#">sainath@stafuel.in</a></li>
-                        <li><a href="#">nagendra@stafuel.in</a></li>
-                        <li><a href="#">jayanth@stafuel.in</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="footer-column col-lg-3 col-md-6 col-sm-12">
-                  <div class="footer-widget links-widget">
-                    <h4 class="widget-title">Useful Links</h4>
-                    <div class="widget-content">
-                      <ul class="list">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Contact</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="footer-column col-lg-3 col-md-6 col-sm-12">
-                  <div class="footer-widget links-widget">
-                    <h4 class="widget-title">Categories</h4>
-                    <div class="widget-content">
-                      <ul class="list">
-                        <li><a href="#">Finance</a></li>
-                        <li><a href="#">Engineering</a></li>
-                        <li><a href="#">Logistics</a></li>
-                        <li><a href="#">Media & Advertising</a></li>
-                        <li><a href="#">Manufacturing</a></li>
-                        <li><a href="#">Telecom</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="footer-column col-lg-3 col-md-6 col-sm-12">
-                  <div class="footer-widget links-widget">
-                    <h4 class="widget-title">Helpful Resources</h4>
-                    <div class="widget-content">
-                      <ul class="list">
-                        <li><a href="#">Automobile</a></li>
-                        <li><a href="#">Banking & Insurance</a></li>
-                        <li><a href="#">BPO</a></li>
-                        <li><a href="#">Chemical Industry</a></li>
-                        <li><a href="#">Hospitality</a></li>
-                        <li><a href="#">IT Services</a></li>
-                        <li><a href="#">Pharmaceuticals</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <!--Bottom-->
-      <div class="footer-bottom">
         <div class="auto-container">
-          <div class="outer-box">
-            <div class="copyright-text">© 2024 <a href="#">Stafuel</a>. All Right Reserved. | Designed by <a>thinkB</a></div>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <div class="outer-box wow fadeInUp">
+            <div class="sec-title">
+              <h2 class="mb-3" style="color: white;">Subscribe Our Newsletter</h2>
+              <div style="color: white;">Advertise your jobs to millions of monthly users and search<br> 15.8 million CVs in our database.</div>
+            </div>
+            <div class="form-column">
+              <div class="subscribe-form">
+                <form method="post" action="#">
+                  <div class="form-group">
+                    <div class="response"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" name="email" class="email bdrs120" value="" placeholder="Your e-mail" required>
+                    <button type="button" id="subscribe-newslatters" class="theme-btn home21-style btn-style-one bg-dark bdrs120">Subscribe <i class="fal fa-long-arrow-right ms-3"></i></button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Scroll To Top -->
-      <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
-    </footer>
-    <!-- End Main Footer -->
+      </section>
+      <!-- End Subscribe Section -->
+  
+      <!-- Main Footer -->
+      <footer class="main-footer alternate3">
+        <div class="auto-container">
+          <!--Widgets Section-->
+          <div class="widgets-section">
+            <div class="row">
+              <div class="big-column col-xl-4 col-lg-3 col-md-12">
+                <div class="footer-column about-widget">
+                  <div class="logo"><a href="#"><img style="width: 185px;" src="images/stafuel-logo.png" alt=""></a></div>
+                  <p class="phone-num"><span>Call us </span><a href="">+91 7382488318</a></p>
+                  <p class="address">3D.No: 10-1-112/4, K.N.Road, Opp SBI bank Market Yard Branch, Tadepalligudem, West Godavari, Andhra Pradesh-534102. <br><a href="mailto:info@stafuel.in" class="email">info@stafuel.in</a></p>
+                </div>
+              </div>
+  
+              <div class="big-column col-xl-8 col-lg-9 col-md-12">
+                <div class="row">
+                  <div class="footer-column col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-widget links-widget">
+                      <h4 class="widget-title">Official Emails</h4>
+                      <div class="widget-content">
+                        <ul class="list">
+                          <li><a href="#">info@stafuel.in</a></li>
+                          <li><a href="#">info@stafuel.in</a></li>
+                          <li><a href="#">sainath@stafuel.in</a></li>
+                          <li><a href="#">nagendra@stafuel.in</a></li>
+                          <li><a href="#">jayanth@stafuel.in</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+  
+  
+                  <div class="footer-column col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-widget links-widget">
+                      <h4 class="widget-title">Useful Links</h4>
+                      <div class="widget-content">
+                        <ul class="list">
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About</a></li>
+                          <li><a href="blogs.html">Blogs</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+  
+                  <div class="footer-column col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-widget links-widget">
+                      <h4 class="widget-title">Categories</h4>
+                      <div class="widget-content">
+                        <ul class="list">
+                          <li><a href="jobs.html">Finance</a></li>
+                          <li><a href="jobs.html">Engineering</a></li>
+                          <li><a href="jobs.html">Logistics</a></li>
+                          <li><a href="jobs.html">Media & Advertising</a></li>
+                          <li><a href="jobs.html">Manufacturing</a></li>
+                          <li><a href="jobs.html">Telecom</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+  
+  
+                  <div class="footer-column col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-widget links-widget">
+                      <h4 class="widget-title">Helpful Resources</h4>
+                      <div class="widget-content">
+                        <ul class="list">
+                          <li><a href="jobs.html">Automobile</a></li>
+                          <li><a href="jobs.html">Banking & Insurance</a></li>
+                          <li><a href="jobs.html">BPO</a></li>
+                          <li><a href="jobs.html">Chemical Industry</a></li>
+                          <li><a href="jobs.html">Hospitality</a></li>
+                          <li><a href="jobs.html">IT Services</a></li>
+                          <li><a href="jobs.html">Pharmaceuticals</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+  
+        <!--Bottom-->
+        <div class="footer-bottom">
+          <div class="auto-container">
+            <div class="outer-box">
+              <div class="copyright-text">© 2024 <a href="#">Stafuel</a>. All Right Reserved. | Designed by <a>thinkB</a></div>
+              <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Scroll To Top -->
+        <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
+      </footer>
+      <!-- End Main Footer -->
 
 
   </div><!-- End Page Wrapper -->
