--- a/blog-detail.html
+++ b/blog-detail.html
@@ -44,19 +44,19 @@
             <nav class="nav main-menu">
               <ul class="navigation" id="navbar">
                 <li class="">
-                  <a href="#">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="">
-                  <a href="#">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li class="">
-                  <a href="">Find Jobs</a>
+                  <a href="jobs.html">Find Jobs</a>
                 </li>
                 <li class="current">
-                  <a href="#">Blogs</a>
+                  <a href="blogs.html">Blogs</a>
                 </li>
                 <li class="">
-                  <a href="#">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
 
                 
@@ -67,7 +67,7 @@
 
           <div class="outer-box">
             <div class="btn-box">
-              <a href="#" class="theme-btn btn-style-seven">Upload Your Resume</a>
+              <a href="upload-resume.html" class="theme-btn btn-style-seven">Upload Your Resume</a>
             </div>
           </div>
         </div>
@@ -75,17 +75,12 @@
 
       <!-- Mobile Header -->
       <div class="mobile-header">
-        <div class="logo"><a href="index.html"><img src="images/logo-3.svg" alt="" title=""></a></div>
+        <div class="logo"><a href="index.html"><img class="logo_navbar_mobile" src="images/stafuel-logo.png" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
 
           <div class="outer-box">
-            <!-- Login/Register -->
-            <div class="login-box">
-              <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
-            </div>
-
             <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
           </div>
         </div>
